Fixed page size issue + cursor bleedthrough to header.

--- a/public/css/document.css
+++ b/public/css/document.css
@@ -15,6 +15,7 @@ body{
     font-family: 'Raleway', sans-serif;
     box-shadow: 1px 4px 15px rgba(0,0,0,.6);
     padding: 10px;
+    z-index: 1;
 }
 
 .header a{
@@ -52,9 +53,9 @@ body{
 }
 
 .page{
-    min-width: Calc(100%-50px);
+    width: Calc(100% - 300px);
     max-width: 700px;
-    height: 1000px;
+    min-height: 1000px;
     background: white;
     display: inline-block;
     border-radius: 1px;
@@ -64,8 +65,11 @@ body{
     margin: 50px;
 }
 
+
+
 @media (max-width: 800px) {
     .page{
+        width: Calc(100% - 220px);
         padding: 80px;
         margin: 30px;
     }
@@ -73,6 +77,7 @@ body{
 
 @media (max-width: 700px) {
     .page{
+        width: Calc(100% - 150px);
         padding: 50px;
         margin: 25px;
     }
@@ -80,6 +85,7 @@ body{
 
 @media (max-width: 600px) {
     .page{
+        width: Calc(100% - 110px);
         padding: 35px;
         margin: 20px;
     }
@@ -87,6 +93,7 @@ body{
 
 @media (max-width: 400px) {
     .page{
+        width: Calc(100% - 70px);
         padding: 20px;
         margin: 15px;
     }
